// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select.svelte > should render items using custom component 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item
          class="w-full flex"
        >
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render items using custom mapping 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item
          class="w-full flex"
        >
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render items using default item when data is invalid 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item
          class="w-full flex"
        >
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render items using field mappings 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item
          class="w-full flex"
        >
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render using default field mapping 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item
          class="w-full flex"
        >
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;

exports[`Select.svelte > should render with alternate class 1`] = `
<body>
  <div>
    <input-select
      class="flex flex-col relative myClass"
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item
          class="w-full flex"
        >
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="button"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
        <iframe
          aria-hidden="true"
          src="about:blank"
          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
      </selected-item>
       
    </input-select>
  </div>
</body>
`;
